--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,25 @@
     grid-gap: 30px;
     margin-top: 30px;
 }
+
+/*  */
+
+.footer{
+    height: 80px;
+    background: #000;
+    margin-top: 30px;
+}
+
+.footer__link{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__list{
+    color: white;
+    font-size: 25px;
+    list-style: none;
+}
